# BrainFckInterpreter

./: .gitignore  BFDefines.h  BFInstructionType.cpp  BFInstructionType.h  CMakeLists.txt  HexDump.h  Logging.h  Stopwatch.h  Util.h  main.cpp
BFInterpreter/: BFEnvironment.cpp  BFEnvironment.h  BFInstruction.cpp  BFInstruction.h  BFInterpreter.cpp  BFInterpreter.h  BFLoader.cpp  BFLoader.h  BFLoopInstruction.h  BFOptimizer.cpp  BFOptimizer.h  BFRunner.cpp  BFRunner.h  BFTokenInfo.h  Direction.h
BFInterpreter/Environments/: BFEnvironment.cpp  BFEnvironment.h  BFInterpreterEnvironment.cpp  BFInterpreterEnvironment.h
BFInterpreter/Instructions/: BFInstruction.cpp  BFInstruction.h  BFMutatorInstruction.h
BFInterpreter/JIT/: BFJITRunner.cpp  BFJITRunner.h
BFInterpreter/Optimizer/: BFLoopPattern.h  BFLoopPatternItem.h  BFOptimizer.cpp  BFOptimizer.h
LanguageDefs/: AlphuckTokens.toml  BFTokens.toml  DerpPlusPlusTokens.toml  OokTokens.toml  RoadrunnerTokens.toml
examples/: CellSize.b  Interpreter.bf  Squares.b  Tree.b  Underflow.bf  fib.b  hoh.bf  invalid.bf  sierpinski.b  test1.bf  transcendental_e.b  yapi.b  yapi2.b
examples/Alphuck/: mandelbrot.alp
examples/DerpPlusPlus/: Hanoi.dpp  HelloWorld.dpp  Mandelbrot.dpp
examples/Ook/: HelloWorld.ook  mandelbrot.ook
examples/Roadrunner/: cat.rr  hanoi.rr  helloworld.rr  mandelbrot.rr
